--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -36,9 +36,26 @@ a {
 }
 
 .mob-hidden {
-	
+	@include r(1200) {
+		display: none;
+	}
 }
 
-.hidden {
+.mob-full {
+	@include r(1200) {
+		width: 100%;
+	}
+}
+
+.mob-center {
+	@include r(1200) {
+		text-align: center;
+	}
+}
+
+.desc-hidden {
 	display: none;
+	@include r(1200) {
+		display: block;
+	}
 }
