--- a/src/views/20_rules.html
+++ b/src/views/20_rules.html
@@ -1,10 +1,11 @@
-    <!DOCTYPE html>
-    <html lang="ru">
-    <head>
-        <title>20. Требования к макетам 9</title>
-        @@include("../blocks/modules/head/head.html")
-    </head>
-    <body class="body">
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <title>20. Требования к макетам 9</title>
+    @@include("../blocks/modules/head/head.html")
+</head>
+<body class="body">
+    <div id="page">
         @@include("../blocks/modules/header/header.html")
         <main class="main">
             <section class="section section--breadcrumbs">
@@ -419,12 +420,12 @@
                         </p>
                     </div>
                     <div class="columns columns--center mb-30">
-                    	<div class="columns__column columns__column--6">
-                    		<img src="img/bolt-1.svg" alt="" class="img img--full">
-                    	</div>
-                    	<div class="columns__column columns__column--6">
-                    		<img src="img/bolt-2.svg" alt="" class="img img--full">
-                    	</div>
+                        <div class="columns__column columns__column--6">
+                            <img src="img/bolt-1.svg" alt="" class="img img--full">
+                        </div>
+                        <div class="columns__column columns__column--6">
+                            <img src="img/bolt-2.svg" alt="" class="img img--full">
+                        </div>
                     </div>
                     <div class="editor mb-40">
                         <h4>
@@ -480,93 +481,93 @@
                             <li>
                                 если используется твердая обложка, то для улучшения эстетичного вида лучше делать блок меньше, чем обложка (чтобы блок был скрыт обложкой в собранном виде)
                             </li>
-                        </li>
-                    </ul>
-                    <h4>
-                        Блок:
-                    </h4>
-                    <ul>
-                        <li>
-                            для блока так же добавляется к макету 20 мм. с корешковой стороны. Это является технологическим полем для скрепления болтами
-                        </li>
-                        <li>
-                            для лучшего раскрытия необходимо делать биговку блока . При большом количестве полос необходимо делать компенсацию биговку для хорошего раскрытия, т.е. немного смещать линию бига ( см. рис.)
-                        </li>
-                    </ul>
-                    <div class="columns mb-30">
-                        <div class="columns__column columns__column--3 mob-hidden"></div>
-                        <div class="columns__column columns__column--6">
-                            <img src="img/ill.svg" class="img img--full" alt="Смещение">
+                        </ul>
+                        <h4>
+                            Блок:
+                        </h4>
+                        <ul>
+                            <li>
+                                для блока так же добавляется к макету 20 мм. с корешковой стороны. Это является технологическим полем для скрепления болтами
+                            </li>
+                            <li>
+                                для лучшего раскрытия необходимо делать биговку блока . При большом количестве полос необходимо делать компенсацию биговку для хорошего раскрытия, т.е. немного смещать линию бига ( см. рис.)
+                            </li>
+                        </ul>
+                        <div class="columns mb-30">
+                            <div class="columns__column columns__column--3 mob-hidden"></div>
+                            <div class="columns__column columns__column--6">
+                                <img src="img/ill.svg" class="img img--full" alt="Смещение">
+                            </div>
+                            <div class="columns__column columns__column--3 mob-hidden"></div>
                         </div>
-                        <div class="columns__column columns__column--3 mob-hidden"></div>
+
+                        <ul>
+                            <li>
+                                вылеты по 3 мм. с каждой стороны
+                            </li>
+                        </ul>
+                        <h4>
+                            Болтовое крепление:
+                        </h4>
+                        <ul>
+                            <li>
+                                минимальная длина болтов – 5 мм. Следовательно толщина скрепляемого блока не должна быть меньше 3-4 мм. ( иначе такая конструкция будет выглядеть непривлекательно)
+                            </li>
+                            <li>
+                                диаметр болта – 5 мм. , шляпка болта – 10 мм.
+                            </li>
+                        </ul>
                     </div>
-                    
-                    <ul>
-                        <li>
-                            вылеты по 3 мм. с каждой стороны
-                        </li>
-                    </ul>
-                    <h4>
-                        Болтовое крепление:
-                    </h4>
-                    <ul>
-                        <li>
-                            минимальная длина болтов – 5 мм. Следовательно толщина скрепляемого блока не должна быть меньше 3-4 мм. ( иначе такая конструкция будет выглядеть непривлекательно)
-                        </li>
-                        <li>
-                            диаметр болта – 5 мм. , шляпка болта – 10 мм.
-                        </li>
-                    </ul>
                 </div>
-            </div>
-        </section>
-        <section class="section">
+            </section>
+            <section class="section">
+                <div class="container">
+                    <div class="editor mb-60">
+                        <p>
+                            Если предполагается, что макет потребует редактирования, то ко всем форматам дополнительно потребуются обработанные фотографии максимального размера, шрифты и логотипы (желательно в векторном виде), используемые в макете. <br>
+                        </p>
+                        <p>
+                            <strong>
+                                Услуга по доработке макета для соотвтствия техническим требованиям является дополнительной и оплачивается отдельно. 
+                            </strong>
+                        </p>
+                        <p>
+                            Типография не несет ответственности за брак, из-за неверно подготовленного к печати макета заказчика. 
+                        </p>
+                    </div>
+                    <div class="columns">
+                        <div class="columns__column columns__column--4">
+                            <img class="img img--center" src="img/alarm-template.png" alt="Внимание!">
+                        </div>
+                        <div class="columns__column columns__column--8">
+                            <div class="editor">
+                                <ul>
+                                    <li>
+                                        Файлы линейки Microsoft office (Word, Exel, Power Point) не являются макетами, подготовленными к печати;
+                                    </li>
+                                    <li>
+                                        При возникновении брака ввиду несоблюдения технических требований, вся ответственность ложиться на сторону предоставившую некорректный макет;
+                                    </li>
+                                    <li>
+                                        Макеты, не соответствующие данным требованиям, могут быть автоматически доработаны типографией без согласования с заказчиком;
+                                    </li>
+                                    <li>
+                                        Цвет при печати может отличаться от экранного из-за особенностей монитора. В связи с этим мы рекомендуем делать цветопробу. Без цветопробы претензии по цвету не принимаются.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer class="section section--footer">
             <div class="container">
-                <div class="editor mb-60">
-                    <p>
-                        Если предполагается, что макет потребует редактирования, то ко всем форматам дополнительно потребуются обработанные фотографии максимального размера, шрифты и логотипы (желательно в векторном виде), используемые в макете. <br>
-                    </p>
-                    <p>
-                        <strong>
-                            Услуга по доработке макета для соотвтствия техническим требованиям является дополнительной и оплачивается отдельно. 
-                        </strong>
-                    </p>
-                    <p>
-                        Типография не несет ответственности за брак, из-за неверно подготовленного к печати макета заказчика. 
-                    </p>
-                </div>
-                <div class="columns">
-                    <div class="columns__column columns__column--4">
-                        <img class="img img--center" src="img/alarm-template.png" alt="Внимание!">
-                    </div>
-                    <div class="columns__column columns__column--8">
-                        <div class="editor">
-                            <ul>
-                                <li>
-                                    Файлы линейки Microsoft office (Word, Exel, Power Point) не являются макетами, подготовленными к печати;
-                                </li>
-                                <li>
-                                    При возникновении брака ввиду несоблюдения технических требований, вся ответственность ложиться на сторону предоставившую некорректный макет;
-                                </li>
-                                <li>
-                                    Макеты, не соответствующие данным требованиям, могут быть автоматически доработаны типографией без согласования с заказчиком;
-                                </li>
-                                <li>
-                                    Цвет при печати может отличаться от экранного из-за особенностей монитора. В связи с этим мы рекомендуем делать цветопробу. Без цветопробы претензии по цвету не принимаются.
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                @@include("../blocks/modules/footer/footer.html")
             </div>
-        </section>
-    </main>
-    <footer class="section section--footer">
-        <div class="container">
-            @@include("../blocks/modules/footer/footer.html")
-        </div>
-    </footer>
-    @@include("../blocks/modules/demo/demo.html")
+        </footer>
+        @@include("../blocks/modules/demo/demo.html")
+    </div>
     <script src="js/main.js"></script>
     <script src="js/vendor.js"></script>
 </body>
