--- a/src/views/4_service-post.html
+++ b/src/views/4_service-post.html
@@ -5,132 +5,134 @@
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
-    @@include("../blocks/modules/header/header.html")
-    <main class="main">
-        <section class="section section--breadcrumbs">
-            <div class="container">
-                @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
-            </div>
-        </section>
-        <section class="section section--top">
-            <div class="container">
-                <h2 class="title mb-80">
-                    UV-Печать
-                </h2>
-                <img class="img img--preview" src="https://placehold.it/377x406" alt="Услуги">
-                <div class="editor">
-                    <h2>
-                        UV-ПЕЧАТЬ В КАЛИНИНГРАДЕ
+    <div id="page">
+        @@include("../blocks/modules/header/header.html")
+        <main class="main">
+            <section class="section section--breadcrumbs">
+                <div class="container">
+                    @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
+                </div>
+            </section>
+            <section class="section section--top">
+                <div class="container">
+                    <h2 class="title mb-80">
+                        UV-Печать
                     </h2>
-                    <p>
-                        Деловые мероприятия являются неотъемлемой составляющей многих сфер бизнеса. Презентация новой продукции, встреча с партнерами, выставка для клиентов, профессиональное событие и другие мероприятия требуют тщательной подготовки и соответствующего оформления.
-                    </p>
-                    <p>
-                        Наша компания рада взять на себя оформление делового мероприятия и другие заботы по подготовке к его проведению. Так как оформление праздников мероприятий является основным направлением нашей работы. Мы предоставляем полный комплекс услуг по оформлению различных мероприятий. Все работы осуществляются квалифицированными специалистами. А клиент получает готовое оформление делового мероприятия под ключ в указанные сроки.
-                    </p>
-                    <h3>
-                        Полноцветная-UV печать
+                    <img class="img img--preview" src="https://placehold.it/377x406" alt="Услуги">
+                    <div class="editor">
+                        <h2>
+                            UV-ПЕЧАТЬ В КАЛИНИНГРАДЕ
+                        </h2>
+                        <p>
+                            Деловые мероприятия являются неотъемлемой составляющей многих сфер бизнеса. Презентация новой продукции, встреча с партнерами, выставка для клиентов, профессиональное событие и другие мероприятия требуют тщательной подготовки и соответствующего оформления.
+                        </p>
+                        <p>
+                            Наша компания рада взять на себя оформление делового мероприятия и другие заботы по подготовке к его проведению. Так как оформление праздников мероприятий является основным направлением нашей работы. Мы предоставляем полный комплекс услуг по оформлению различных мероприятий. Все работы осуществляются квалифицированными специалистами. А клиент получает готовое оформление делового мероприятия под ключ в указанные сроки.
+                        </p>
+                        <h3>
+                            Полноцветная-UV печать
+                        </h3>
+                        <p>
+                            УФ печать (или UV печать) — технология нанесения полноцветного изображения на бизнес-подарки и промопродукцию. В нашей компании используется прямая УФ печать на пластике: брелках, флешках, зажигалках, фонариках, USB-разветвителях, компьютерных мышках и ковриках.
+                        </p>
+                        <p>
+                            Технология УФ печати позволяет наносить любые изображения практически на все виды сувенирной продукции. Что значительно расширяет ваши рекламные возможности.
+                        </p>
+                        <img src="https://placehold.it/1200x670" alt="">
+                        <h3>
+                            Преимущества УФ печати на сувенирах
+                        </h3>
+                        <ul>
+                            <li>
+                                фотореалистичное изображение;
+                            </li>
+                            <li>
+                                стойкая УФ печать на сувенирах;
+                            </li>
+                            <li>
+                                большая площадь нанесения;
+                            </li>
+                        </ul>
+                        <p>
+                            УФ-печать, в отличие от тампопечати, позволяет наносить на предметы четкое полноцветное изображение высокого качества, что делает подарок еще более ярким и выделяющимся на фоне других. Фотореалистичное изображение смотрится особенно органично, как будто создавалось вместе с самим изделием.
+                        </p>
+                        <p>
+                            Cтоит учесть, что выбрать цвета по шкале Pantone при нанесении УФ-печати невозможно, так как в данном случае используется цветовая модель CMYK. Для нанесения логотипа в одном или нескольких цветах по Pantone выбирайте тампопечать.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="section section--gray section--decor">
+                <div class="container">
+                    <h3 class="title title--small mb-60">
+                        Наши работы
                     </h3>
-                    <p>
-                        УФ печать (или UV печать) — технология нанесения полноцветного изображения на бизнес-подарки и промопродукцию. В нашей компании используется прямая УФ печать на пластике: брелках, флешках, зажигалках, фонариках, USB-разветвителях, компьютерных мышках и ковриках.
-                    </p>
-                    <p>
-                        Технология УФ печати позволяет наносить любые изображения практически на все виды сувенирной продукции. Что значительно расширяет ваши рекламные возможности.
-                    </p>
-                    <img src="https://placehold.it/1200x670" alt="">
-                    <h3>
-                        Преимущества УФ печати на сувенирах
+                    <div class="articles">
+                        <div class="articles__content">
+                            <div class="articles__item articles__item--25">
+                                @@include("../blocks/modules/preview-work/preview-work.html")
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                @@include("../blocks/modules/preview-work/preview-work.html")
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                @@include("../blocks/modules/preview-work/preview-work.html")
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                @@include("../blocks/modules/preview-work/preview-work.html")
+                            </div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                        </div>
+                        <div class="articles__toolbar">
+                            <a href="" class="btn btn--orange">
+                                <span>
+                                    Все работы
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <h3 class="title title--small mb-60">
+                        ПРАЙС НА УСЛУГИ UV-ПЕЧАТИ
                     </h3>
-                    <ul>
-                        <li>
-                            фотореалистичное изображение;
-                        </li>
-                        <li>
-                            стойкая УФ печать на сувенирах;
-                        </li>
-                        <li>
-                            большая площадь нанесения;
-                        </li>
-                    </ul>
-                    <p>
-                        УФ-печать, в отличие от тампопечати, позволяет наносить на предметы четкое полноцветное изображение высокого качества, что делает подарок еще более ярким и выделяющимся на фоне других. Фотореалистичное изображение смотрится особенно органично, как будто создавалось вместе с самим изделием.
-                    </p>
-                    <p>
-                        Cтоит учесть, что выбрать цвета по шкале Pantone при нанесении УФ-печати невозможно, так как в данном случае используется цветовая модель CMYK. Для нанесения логотипа в одном или нескольких цветах по Pantone выбирайте тампопечать.
-                    </p>
+                    <div class="columns">
+                        <div class="columns__column columns__column--9">
+                            <div class="editor mb-40">
+                                <p>
+                                    Индивидуальные заказы расчитываются отдельно. На стоимость влияет множество факторов, например при изготовлении печатной продукции цена может изменяться в зависимости от сложности изделия, площади и цветности нанесенной информациии, от плотности и стоимости материалов и д.р. 
+                                </p>
+                                <p>
+                                    Отправляйте Ваши запросы на просчет и мы предоставим Вам всю необходимую информацию. На крупные заказы и для постоянных клиентов предоставляем систему бонусов и скидок.Если вы не нашли в прайсе нужный для вас тираж или изделие, то обращайтесь к менеджеру для уточнения стоимости. Цены уточняйте у менеджера по телефону <a href="tel:+74012750155">+7 (4012) 75-01-55</a>
+                                </p>
+                            </div>
+                            <a href="" class="btn btn--download">
+                                <svg class="btn__icon-download">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-download"></use>
+                                </svg>
+                                <span>
+                                    СКАЧАТЬ ПРАЙС ЛИСТ
+                                </span>
+                            </a>
+                        </div>
+                        <div class="columns__column columns__column--3">
+                            <img class="img img--center" src="img/price-img.png" alt="">
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <section class="section section--gray section--decor">
+            </section>
+        </main>
+        <footer class="section section--footer">
             <div class="container">
-                <h3 class="title title--small mb-60">
-                    Наши работы
-                </h3>
-                <div class="articles">
-                    <div class="articles__content">
-                        <div class="articles__item articles__item--25">
-                            @@include("../blocks/modules/preview-work/preview-work.html")
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            @@include("../blocks/modules/preview-work/preview-work.html")
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            @@include("../blocks/modules/preview-work/preview-work.html")
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            @@include("../blocks/modules/preview-work/preview-work.html")
-                        </div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                    </div>
-                    <div class="articles__toolbar">
-                        <a href="" class="btn btn--orange">
-                            <span>
-                                Все работы
-                            </span>
-                        </a>
-                    </div>
-                </div>
+                @@include("../blocks/modules/footer/footer.html")
             </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <h3 class="title title--small mb-60">
-                    ПРАЙС НА УСЛУГИ UV-ПЕЧАТИ
-                </h3>
-                <div class="columns">
-                    <div class="columns__column columns__column--9">
-                        <div class="editor mb-40">
-                            <p>
-                                Индивидуальные заказы расчитываются отдельно. На стоимость влияет множество факторов, например при изготовлении печатной продукции цена может изменяться в зависимости от сложности изделия, площади и цветности нанесенной информациии, от плотности и стоимости материалов и д.р. 
-                            </p>
-                            <p>
-                                Отправляйте Ваши запросы на просчет и мы предоставим Вам всю необходимую информацию. На крупные заказы и для постоянных клиентов предоставляем систему бонусов и скидок.Если вы не нашли в прайсе нужный для вас тираж или изделие, то обращайтесь к менеджеру для уточнения стоимости. Цены уточняйте у менеджера по телефону <a href="tel:+74012750155">+7 (4012) 75-01-55</a>
-                            </p>
-                        </div>
-                        <a href="" class="btn btn--download">
-                            <svg class="btn__icon-download">
-                                <use xlink:href="img/sprites/sprite.svg#icon-download"></use>
-                            </svg>
-                            <span>
-                                СКАЧАТЬ ПРАЙС ЛИСТ
-                            </span>
-                        </a>
-                    </div>
-                    <div class="columns__column columns__column--3">
-                        <img class="img img--center" src="img/price-img.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="section section--footer">
-        <div class="container">
-            @@include("../blocks/modules/footer/footer.html")
-        </div>
-    </footer>
-    @@include("../blocks/modules/demo/demo.html")
+        </footer>
+        @@include("../blocks/modules/demo/demo.html")
+    </div>
     <script src="js/main.js"></script>
     <script src="js/vendor.js"></script>
 </body>
