--- a/src/views/6_promo.html
+++ b/src/views/6_promo.html
@@ -5,97 +5,99 @@
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
-    @@include("../blocks/modules/header/header.html")
-    <main class="main">
-        <section class="section section--breadcrumbs">
-            <div class="container">
-                @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
-            </div>
-        </section>
-        <section class="section section--light section--top">
-            <div class="container">
-                <h2 class="title mb-40">
-                    Акции
-                </h2>
-                <div class="editor mb-60">
-                    <p>
-                        Мы регулярно проводим различные акции для наших клиентов. <br>
-                        Заказывайте рекламу выгодно!
-                    </p>
-                    <p>
-                        Подробности и условия Акции уточняйте у менеджера по телефону <strong><a href="tel:+79814750155">+7 981-475-01-55</a></strong>
-                    </p>
+    <div id="page">
+        @@include("../blocks/modules/header/header.html")
+        <main class="main">
+            <section class="section section--breadcrumbs">
+                <div class="container">
+                    @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
                 </div>
-                <div class="articles mb-40">
-                    <div class="articles__content">
-                        <div class="articles__item articles__item--50">
-                            <a href="" class="link-card" style="background-image: url('img/promo-1.png');">
-                                <p class="link-card__text">
-                                    Закажи световую вывеску и получи 1-ую мойку с обработкой защитным покрытием бесплатно!
-                                </p>
-                            </a>
+            </section>
+            <section class="section section--light section--top">
+                <div class="container">
+                    <h2 class="title mb-40">
+                        Акции
+                    </h2>
+                    <div class="editor mb-60">
+                        <p>
+                            Мы регулярно проводим различные акции для наших клиентов. <br>
+                            Заказывайте рекламу выгодно!
+                        </p>
+                        <p>
+                            Подробности и условия Акции уточняйте у менеджера по телефону <strong><a href="tel:+79814750155">+7 981-475-01-55</a></strong>
+                        </p>
+                    </div>
+                    <div class="articles mb-40">
+                        <div class="articles__content">
+                            <div class="articles__item articles__item--50">
+                                <a href="" class="link-card" style="background-image: url('img/promo-1.png');">
+                                    <p class="link-card__text">
+                                        Закажи световую вывеску и получи 1-ую мойку с обработкой защитным покрытием бесплатно!
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/promo-2.png');">
+                                    <p class="link-card__text">
+                                        К каждой вывеске паспорт-спецификация по дизайн коду в подарок!
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/promo-3.png');">
+                                    <p class="link-card__text">
+                                        Двухсторонние, цветные визитки по 1,5 руб.
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/promo-4.png');">
+                                    <p class="link-card__text">
+                                        Двухсторонние, цветные листовки от 1,99 руб.
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/promo-5.png');">
+                                    <p class="link-card__text">
+                                        При заказе от 30000 рублей табличка «Режим работы» в подарок!
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--50">
+                                <a href="" class="link-card link-card--invert" style="background-image: url('img/promo-6.png');">
+                                    <p class="link-card__text">
+                                        При заказе от 50000 рублей 1000 цветных визиток в подарок!
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
                         </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/promo-2.png');">
-                                <p class="link-card__text">
-                                    К каждой вывеске паспорт-спецификация по дизайн коду в подарок!
-                                </p>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/promo-3.png');">
-                                <p class="link-card__text">
-                                    Двухсторонние, цветные визитки по 1,5 руб.
-                                </p>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/promo-4.png');">
-                                <p class="link-card__text">
-                                    Двухсторонние, цветные листовки от 1,99 руб.
-                                </p>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/promo-5.png');">
-                                <p class="link-card__text">
-                                    При заказе от 30000 рублей табличка «Режим работы» в подарок!
-                                </p>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--50">
-                            <a href="" class="link-card link-card--invert" style="background-image: url('img/promo-6.png');">
-                                <p class="link-card__text">
-                                    При заказе от 50000 рублей 1000 цветных визиток в подарок!
-                                </p>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
+                    </div>
+                    <div class="editor">
+                        <p>
+                            Конечно, нам нравится то, что мы делаем! В первую очередь рекламное производство «Ракета» - это профессионалы! На любой ваш запрос у нас есть как минимум 3-4 варианта реализации проекта: по цене и по используемой технологии.
+                        </p>
+                        <p>
+                            У нас собственное производство! Мы самостоятельно проектируем, изготавливаем и монтируем рекламные изделия и конструкции.
+                        </p>
+                        <p>
+                            Мы уделяем внимание развитию наших сотрудников! Вы всегда можете получить профессиональную подробную консультацию по любой задаче: от небольшой вывески до крышной установки или тиража рекламных стоек. Наши менеджеры решают любые задачи, 
+                            а технологи и инженеры воплощают самые смелые дизайн-проекты в жизнь!
+                        </p>
                     </div>
                 </div>
-                <div class="editor">
-                    <p>
-                        Конечно, нам нравится то, что мы делаем! В первую очередь рекламное производство «Ракета» - это профессионалы! На любой ваш запрос у нас есть как минимум 3-4 варианта реализации проекта: по цене и по используемой технологии.
-                    </p>
-                    <p>
-                        У нас собственное производство! Мы самостоятельно проектируем, изготавливаем и монтируем рекламные изделия и конструкции.
-                    </p>
-                    <p>
-                        Мы уделяем внимание развитию наших сотрудников! Вы всегда можете получить профессиональную подробную консультацию по любой задаче: от небольшой вывески до крышной установки или тиража рекламных стоек. Наши менеджеры решают любые задачи, 
-                        а технологи и инженеры воплощают самые смелые дизайн-проекты в жизнь!
-                    </p>
-                </div>
+            </section>
+        </main>
+        <footer class="section section--footer">
+            <div class="container">
+                @@include("../blocks/modules/footer/footer.html")
             </div>
-        </section>
-    </main>
-    <footer class="section section--footer">
-        <div class="container">
-            @@include("../blocks/modules/footer/footer.html")
-        </div>
-    </footer>
-    @@include("../blocks/modules/demo/demo.html")
+        </footer>
+        @@include("../blocks/modules/demo/demo.html")
+    </div>
     <script src="js/main.js"></script>
     <script src="js/vendor.js"></script>
 </body>
