--- a/src/views/9_single.html
+++ b/src/views/9_single.html
@@ -5,65 +5,67 @@
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
-    @@include("../blocks/modules/header/header.html")
-    <main class="main">
-        <section class="section section--breadcrumbs">
-            <div class="container">
-                @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
-            </div>
-        </section>
-        <section class="section section--top">
-            <div class="container">
-                <h2 class="title mb-40">
-                    Какой цвет вывески выбрать?
-                </h2>
-                <div class="editor mb-60">
-                    <p>
-                        Прошел месяц после монтажа Вашей вывески? Отлично! К Вам выезжает наш специалист отдела технического контроля! Этот человек подчиняется исключительно директору нашей компании, что обеспечивает независимость контроля качества изготовления и монтажа Вашей рекламной конструкции. Если все же вдруг выявляется какая-то проблема, мы прикладываем все усилия, чтобы оперативно ее решить. 
-                    </p>
-                    <img src="https://placehold.it/1800x530" alt="">
-                    <p>
-                        Итак, вывеска несет следующую нагрузку: информационную и имиджевую. Информационная нагрузка заключается в том, что на вывеске указывается не только название фирмы, но и чем она занимается. Имиджевая- с этим уже сложнее. Многие предприятия не слишком обращают внимание на эту деталь и не думают о соответствии вывески стилю предприятия. Конечно, когда корпоративный стиль уже выверен и разработан, то изготовление вывесок идет в той же цветовой гамме, а иногда и соответствует фирменный шрифт, не говоря уж о логотипе предприятия.
-                    </p>
-                    <p>
-                        Что касается дизайна вывески, то тут главное- не переборщить, обилие красок, странных изображений и готических шрифтов, может вызвать отторжение и неприязнь у посетителя. Чувство меры и вкуса все же предпочтительнее и в этом лучше положиться на дизайнера, если у вас не имеется своих идей. А если идеи имеются (особенно не стандартные), то все же прислушаться к советам профессионала.
-                    </p>
-                    <p>
-                        Что еще влияет на имиджевый аспект, кроме цвета и дизайна? Материал. То из чего изготовлена вывеска. Собираясь сэкономить и, заказывая вывеску из дешевого материала, вы тем самым подчеркиваете свой статус, вернее его отсутствие. Никто не говорит о том, чтобы вывеска была вся расфуфырено-вычурная, но качество, понятный , но при этом яркий дизайн и шрифт- это обязательные составляющие любой удачной вывески. То есть вывеска не должна быть блеклой и незаметной. Исключение составляют лишь сдержанные вывески для официальных учреждений.
-                    </p>
-                    <p>
-                        Вывески бывают интерьерные и наружные. Интерьерные вывески, как уже понятно, располагаются внутри здания и представляют собой различные небольшие таблички рядом с офисами, либо это вывески магазинов внутри торговых центров. Такие вывески не обязательно нуждаются в подсветке, но зато их исполнение должно быть безупречно, так как они находятся на близком расстоянии от глаз.
-                    </p>
-                    <p>
-                        Наружные вывески обязательно должны быть заметными и яркими. А чтобы такая вывеска работала и в темное время суток, а зимой темнеет уже в четвертом часу дня, им не обойтись без освещения.
-                    </p>
-                    <p>
-                        Чаще всего наружные вывески изготавливают в виде световых коробов, крышных установок, объемных букв и т.д. Все эти виды вывесок обязательно имеют источник освещения и их нельзя не заметить даже ночью. А если еще подсветка меняет цвет или переливается, то она невольно приковывает внимание. Тут главное, не превратиться в елочную гирлянду.
-                    </p>
-                    <p>
-                        Подсветка вывески может быть как снаружи в виде направленных лучей света, так и освещать вывеску, располагаясь изнутри.
-                    </p>
-                    <p>
-                        Функции подсветки выполняют светодиодные установки, галогенные лампы, а иногда и их сочетание.
-                    </p>
-                    <p>
-                        Но то, что световые вывески гораздо привлекательнее, хотя и дороже, никто и не отрицает. Дорогая вывеска- это еще и вложение денег в будущее фирмы. Это поддержка имиджа, статуса, да и красивую вывеску без хороших расходных материалов изготовить весьма проблематично. Так что сначала вы тратитесь на изготовление вывесок, потом вывеска приглашает клиентов и окупает себя.
-                    </p>
+    <div id="page">
+        @@include("../blocks/modules/header/header.html")
+        <main class="main">
+            <section class="section section--breadcrumbs">
+                <div class="container">
+                    @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
                 </div>
-                <a href="" class="btn btn--back">
-                    <span>
-                        Назад
-                    </span>
-                </a>
+            </section>
+            <section class="section section--top">
+                <div class="container">
+                    <h2 class="title mb-40">
+                        Какой цвет вывески выбрать?
+                    </h2>
+                    <div class="editor mb-60">
+                        <p>
+                            Прошел месяц после монтажа Вашей вывески? Отлично! К Вам выезжает наш специалист отдела технического контроля! Этот человек подчиняется исключительно директору нашей компании, что обеспечивает независимость контроля качества изготовления и монтажа Вашей рекламной конструкции. Если все же вдруг выявляется какая-то проблема, мы прикладываем все усилия, чтобы оперативно ее решить. 
+                        </p>
+                        <img src="https://placehold.it/1800x530" alt="">
+                        <p>
+                            Итак, вывеска несет следующую нагрузку: информационную и имиджевую. Информационная нагрузка заключается в том, что на вывеске указывается не только название фирмы, но и чем она занимается. Имиджевая- с этим уже сложнее. Многие предприятия не слишком обращают внимание на эту деталь и не думают о соответствии вывески стилю предприятия. Конечно, когда корпоративный стиль уже выверен и разработан, то изготовление вывесок идет в той же цветовой гамме, а иногда и соответствует фирменный шрифт, не говоря уж о логотипе предприятия.
+                        </p>
+                        <p>
+                            Что касается дизайна вывески, то тут главное- не переборщить, обилие красок, странных изображений и готических шрифтов, может вызвать отторжение и неприязнь у посетителя. Чувство меры и вкуса все же предпочтительнее и в этом лучше положиться на дизайнера, если у вас не имеется своих идей. А если идеи имеются (особенно не стандартные), то все же прислушаться к советам профессионала.
+                        </p>
+                        <p>
+                            Что еще влияет на имиджевый аспект, кроме цвета и дизайна? Материал. То из чего изготовлена вывеска. Собираясь сэкономить и, заказывая вывеску из дешевого материала, вы тем самым подчеркиваете свой статус, вернее его отсутствие. Никто не говорит о том, чтобы вывеска была вся расфуфырено-вычурная, но качество, понятный , но при этом яркий дизайн и шрифт- это обязательные составляющие любой удачной вывески. То есть вывеска не должна быть блеклой и незаметной. Исключение составляют лишь сдержанные вывески для официальных учреждений.
+                        </p>
+                        <p>
+                            Вывески бывают интерьерные и наружные. Интерьерные вывески, как уже понятно, располагаются внутри здания и представляют собой различные небольшие таблички рядом с офисами, либо это вывески магазинов внутри торговых центров. Такие вывески не обязательно нуждаются в подсветке, но зато их исполнение должно быть безупречно, так как они находятся на близком расстоянии от глаз.
+                        </p>
+                        <p>
+                            Наружные вывески обязательно должны быть заметными и яркими. А чтобы такая вывеска работала и в темное время суток, а зимой темнеет уже в четвертом часу дня, им не обойтись без освещения.
+                        </p>
+                        <p>
+                            Чаще всего наружные вывески изготавливают в виде световых коробов, крышных установок, объемных букв и т.д. Все эти виды вывесок обязательно имеют источник освещения и их нельзя не заметить даже ночью. А если еще подсветка меняет цвет или переливается, то она невольно приковывает внимание. Тут главное, не превратиться в елочную гирлянду.
+                        </p>
+                        <p>
+                            Подсветка вывески может быть как снаружи в виде направленных лучей света, так и освещать вывеску, располагаясь изнутри.
+                        </p>
+                        <p>
+                            Функции подсветки выполняют светодиодные установки, галогенные лампы, а иногда и их сочетание.
+                        </p>
+                        <p>
+                            Но то, что световые вывески гораздо привлекательнее, хотя и дороже, никто и не отрицает. Дорогая вывеска- это еще и вложение денег в будущее фирмы. Это поддержка имиджа, статуса, да и красивую вывеску без хороших расходных материалов изготовить весьма проблематично. Так что сначала вы тратитесь на изготовление вывесок, потом вывеска приглашает клиентов и окупает себя.
+                        </p>
+                    </div>
+                    <a href="" class="btn btn--back">
+                        <span>
+                            Назад
+                        </span>
+                    </a>
+                </div>
+            </section>
+        </main>
+        <footer class="section section--footer">
+            <div class="container">
+                @@include("../blocks/modules/footer/footer.html")
             </div>
-        </section>
-    </main>
-    <footer class="section section--footer">
-        <div class="container">
-            @@include("../blocks/modules/footer/footer.html")
-        </div>
-    </footer>
-    @@include("../blocks/modules/demo/demo.html")
+        </footer>
+        @@include("../blocks/modules/demo/demo.html")
+    </div>
     <script src="js/main.js"></script>
     <script src="js/vendor.js"></script>
 </body>
