--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,46 +1,52 @@
 @import "modules/body/body";
 @import "modules/container/container";
-@import "modules/section/section";
-@import "modules/articles/articles";
-@import "modules/columns/columns";
+/**/@import "modules/section/section";
+/**/@import "modules/articles/articles";
+/**/@import "modules/columns/columns";
 
 @import "modules/header/header";
 @import "modules/header-top/header-top";
 @import "modules/header-bottom/header-bottom";
 @import "modules/breadcrumbs/breadcrumbs";
 @import "modules/footer/footer";
-@import "modules/editor/editor";
-@import "modules/table-btn/table-btn";
-@import "modules/table/table";
+/**/@import "modules/editor/editor";
+/**/@import "modules/table-btn/table-btn";
+/**/@import "modules/table/table";
 @import "modules/footer-social/footer-social";
-@import "modules/title/title";
+/**/@import "modules/title/title";
 @import "modules/btn/btn";
-@import "modules/select/select";
-@import "modules/text/text";
-@import "modules/figure/figure";
+/**/@import "modules/select/select";
+/**/@import "modules/text/text";
+/**/@import "modules/figure/figure";
 @import "modules/img/img";
-@import "modules/title-icon/title-icon";
-@import "modules/bg-icon/bg-icon";
-@import "modules/map/map";
+/**/@import "modules/title-icon/title-icon";
+/**/@import "modules/bg-icon/bg-icon";
+/**/@import "modules/map/map";
+/**/@import "modules/mmenu/mmenu";
 
-@import "modules/preview-work/preview-work";
-@import "modules/product-ad/product-ad";
-@import "modules/link-card/link-card";
-@import "modules/contact-card/contact-card";
-@import "modules/contact-line/contact-line";
-@import "modules/map-block/map-block";
-@import "modules/news-card/news-card";
-@import "modules/person-card/person-card";
-@import "modules/column-title/column-title";
-@import "modules/example/example";
+/**/@import "modules/preview-work/preview-work";
+/**/@import "modules/product-ad/product-ad";
+/**/@import "modules/link-card/link-card";
+/**/@import "modules/contact-card/contact-card";
+/**/@import "modules/contact-line/contact-line";
+/**/@import "modules/map-block/map-block";
+/**/@import "modules/news-card/news-card";
+/**/@import "modules/person-card/person-card";
+/**/@import "modules/column-title/column-title";
+/**/@import "modules/example/example";
 
 @import "modules/intro-slider/intro-slider";
-@import "modules/front-fact/front-fact";
-@import "modules/item-format/item-format";
-@import "modules/item-care/item-care";
-@import "modules/item-rule/item-rule";
-@import "modules/item-book/item-book";
-@import "modules/modal/modal";
-@import "modules/modal-menu/modal-menu";
-@import "modules/partner/partner";
-@import "modules/demo/demo";
+/**/@import "modules/front-fact/front-fact";
+/**/@import "modules/item-format/item-format";
+/**/@import "modules/item-care/item-care";
+/**/@import "modules/item-rule/item-rule";
+/**/@import "modules/item-book/item-book";
+/**/@import "modules/example-line/example-line";
+/**/@import "modules/modal/modal";
+/**/@import "modules/modal-menu/modal-menu";
+/**/@import "modules/partner/partner";
+/**/@import "modules/demo/demo";
+
+@include r(1200) {
+
+}
