--- a/src/blocks/modules/btn/btn.scss
+++ b/src/blocks/modules/btn/btn.scss
@@ -8,15 +8,26 @@
 	padding: rem(19) rem(56);
 	cursor: pointer;
 	transition: 0.3s all;
+	@include r(1200) {
+		height: rem(50);
+		padding: rem(15) rem(30);
+	}
 	&:hover {
 		opacity: 0.7;
 	}
 	&--small {
 		height: rem(50);
+		@include r(1200) {
+			height: rem(44);
+		}
 	}
 	&--head {
 		height: rem(50);
 		font-size: rem(18);
+		@include r(1200) {
+			height: rem(44);
+			font-size: rem(16);
+		}
 	}
 	&--light {
 		background-color: $light;
@@ -68,10 +79,14 @@
 		width: rem(48);
 		height: rem(48);
 		margin-right: rem(8);
+		@include r(1200) {
+			width: rem(32);
+			height: rem(32);
+		}
 	}
 	&__icon-load {
 		width: rem(22);
 		height: rem(22);
-		margin-left: rem(10);
+		margin-left: rem(14);
 	}
 }
