--- a/src/blocks/modules/table/table.scss
+++ b/src/blocks/modules/table/table.scss
@@ -1,5 +1,4 @@
 .table {
-	margin-bottom: rem(60);
 	display: block;
 	width: 100%;
 	border-collapse: collapse;
@@ -8,35 +7,22 @@
 	opacity: 1;
 	overflow: hidden;
 	transition: 0.3s all;
+	margin-bottom: rem(60);
+	border-collapse: separate; 
+	border-spacing: 10px;
 	&--left {
 		text-align: left;
 	}
-	&--hidden {
-		margin-bottom: 1.5rem;
-		thead, tbody {
-			max-height: rem(0) !important;
-			opacity: 0 !important;
-			visibility: hidden;
-		}
-		.table__caption {
-			margin-bottom: 0;
-		}
-
+	&--dropdown {
+		max-height: 0px;
+		visibility: hidden;
+		margin-bottom: rem(0);
 	}
-	// &__caption {
-	// 	display: block;
-	// 	width: 100%;
-	// 	text-align: left;
-	// 	margin-bottom: rem(30);
-	// 	font-size: rem(16);
-	// 	font-weight: 700;
-	// 	text-decoration: underline;
-	// 	cursor: pointer;
-	// 	transition: 0.3s all;
-	// 	&:hover {
-	// 		opacity: 0.7;
-	// 	}
-	// }
+	&--visible {
+		max-height: rem(2000);
+		visibility: visible;
+		margin-bottom: rem(60);
+	}
 	&__col {
 		&--4 {
 			width: calc(100% / 12 * 4);
@@ -48,16 +34,13 @@
 	thead, tbody {
 		width: 100%;
 		display: block;
-		max-height: rem(2000);
-		opacity: 1;
-		transition: 0.3s all;
 	}
 	tr {
 		display: flex;
 		width: 100%;
 	}
 	th {
-		border: rem(1) solid #F2F2F2;
+		border: rem(2) solid #F2F2F2;
 		background-color: $orange;
 		color: $light;
 		padding: rem(10) rem(20);
@@ -66,7 +49,7 @@
 		font-weight: 500;
 	}
 	td {
-		border: rem(1) solid #F2F2F2;
+		border: rem(2) solid #F2F2F2;
 		padding: rem(10) rem(20);
 		background-color: $light;
 		flex-grow: 1;
