--- a/src/views/11_makets.html
+++ b/src/views/11_makets.html
@@ -5,144 +5,146 @@
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
-    @@include("../blocks/modules/header/header.html")
-    <main class="main">
-        <section class="section section--breadcrumbs">
-            <div class="container">
-                @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
-            </div>
-        </section>
-        <section class="section section--top">
-            <div class="container">
-                <h2 class="title mb-80">
-                    Требования к макетам
-                </h2>
-                <h3 class="title title--small title--underline-orange mb-40">
-                    Общие требования
-                </h3>
-                <div class="articles">
-                    <div class="articles__content articles__content--left">
-                        <a href="" class="btn btn--file btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-1"></use>
-                            </svg>
-                            <span>
-                                Общие требования к макетам
-                            </span>
-                        </a>
-                        <a href="" class="btn btn--file btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-2"></use>
-                            </svg>
-                            <span>
-                                Требования для широкоформатной печати
-                            </span>
-                        </a>
-                        <a href="" class="btn btn--file btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-3"></use>
-                            </svg>
-                            <span>
-                                Требования к макетам для резки
-                            </span>
-                        </a>
-                        <a href="" class="btn btn--file btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-4"></use>
-                            </svg>
-                            <span>
-                                Подробные требования для различных файлов
-                            </span>
-                        </a>
-                        <a href="" class="btn btn--file btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-5"></use>
-                            </svg>
-                            <span>
-                                Частые ошибки
-                            </span>
-                        </a>
+    <div id="page">
+        @@include("../blocks/modules/header/header.html")
+        <main class="main">
+            <section class="section section--breadcrumbs">
+                <div class="container">
+                    @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
+                </div>
+            </section>
+            <section class="section section--top">
+                <div class="container">
+                    <h2 class="title mb-80">
+                        Требования к макетам
+                    </h2>
+                    <h3 class="title title--small title--underline-orange mb-40">
+                        Общие требования
+                    </h3>
+                    <div class="articles">
+                        <div class="articles__content articles__content--left">
+                            <a href="" class="btn btn--file btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-1"></use>
+                                </svg>
+                                <span>
+                                    Общие требования к макетам
+                                </span>
+                            </a>
+                            <a href="" class="btn btn--file btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-2"></use>
+                                </svg>
+                                <span>
+                                    Требования для широкоформатной печати
+                                </span>
+                            </a>
+                            <a href="" class="btn btn--file btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-3"></use>
+                                </svg>
+                                <span>
+                                    Требования к макетам для резки
+                                </span>
+                            </a>
+                            <a href="" class="btn btn--file btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-4"></use>
+                                </svg>
+                                <span>
+                                    Подробные требования для различных файлов
+                                </span>
+                            </a>
+                            <a href="" class="btn btn--file btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-5"></use>
+                                </svg>
+                                <span>
+                                    Частые ошибки
+                                </span>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="section section--orange section--decor">
-            <div class="container">
-                <h3 class="title title--small title--underline-light mb-40">
-                    Полиграфия
-                </h3>
-                <div class="articles">
-                    <div class="articles__content articles__content--left">
-                        <a href="" class="btn btn--white btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-6"></use>
-                            </svg>
-                            <span>
-                                Визитки
-                            </span>
-                        </a>
-                        <a href="" class="btn btn--white btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-7"></use>
-                            </svg>
-                            <span>
-                                Многостраничная продукция
-                            </span>
-                        </a>
-                        <a href="" class="btn btn--white btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-8"></use>
-                            </svg>
-                            <span>
-                                Буклеты (лифлеты)
-                            </span>
-                        </a>
-                        <a href="" class="btn btn--white btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-9"></use>
-                            </svg>
-                            <span>
-                                Листовки
-                            </span>
-                        </a>
+            </section>
+            <section class="section section--orange section--decor">
+                <div class="container">
+                    <h3 class="title title--small title--underline-light mb-40">
+                        Полиграфия
+                    </h3>
+                    <div class="articles">
+                        <div class="articles__content articles__content--left">
+                            <a href="" class="btn btn--white btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-6"></use>
+                                </svg>
+                                <span>
+                                    Визитки
+                                </span>
+                            </a>
+                            <a href="" class="btn btn--white btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-7"></use>
+                                </svg>
+                                <span>
+                                    Многостраничная продукция
+                                </span>
+                            </a>
+                            <a href="" class="btn btn--white btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-8"></use>
+                                </svg>
+                                <span>
+                                    Буклеты (лифлеты)
+                                </span>
+                            </a>
+                            <a href="" class="btn btn--white btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-9"></use>
+                                </svg>
+                                <span>
+                                    Листовки
+                                </span>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="section">
-            <div class="container">
-                <h3 class="title title--small title--underline-orange mb-40">
-                    Другая продукция
-                </h3>
-                <div class="articles">
-                    <div class="articles__content articles__content--left">
-                        <a href="" class="btn btn--file btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-10"></use>
-                            </svg>
-                            <span>
-                                Сувениры
-                            </span>
-                        </a>
-                        <a href="" class="btn btn--file btn--inline">
-                            <svg class="btn__icon">
-                                <use xlink:href="img/sprites/sprite.svg#icon-btn-11"></use>
-                            </svg>
-                            <span>
-                                Одежда
-                            </span>
-                        </a>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <h3 class="title title--small title--underline-orange mb-40">
+                        Другая продукция
+                    </h3>
+                    <div class="articles">
+                        <div class="articles__content articles__content--left">
+                            <a href="" class="btn btn--file btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-10"></use>
+                                </svg>
+                                <span>
+                                    Сувениры
+                                </span>
+                            </a>
+                            <a href="" class="btn btn--file btn--inline">
+                                <svg class="btn__icon">
+                                    <use xlink:href="img/sprites/sprite.svg#icon-btn-11"></use>
+                                </svg>
+                                <span>
+                                    Одежда
+                                </span>
+                            </a>
+                        </div>
                     </div>
                 </div>
+            </section>
+        </main>
+        <footer class="section section--footer">
+            <div class="container">
+                @@include("../blocks/modules/footer/footer.html")
             </div>
-        </section>
-    </main>
-    <footer class="section section--footer">
-        <div class="container">
-            @@include("../blocks/modules/footer/footer.html")
-        </div>
-    </footer>
-    @@include("../blocks/modules/demo/demo.html")
+        </footer>
+        @@include("../blocks/modules/demo/demo.html")
+    </div>
     <script src="js/main.js"></script>
     <script src="js/vendor.js"></script>
 </body>
