--- a/src/views/2_services.html
+++ b/src/views/2_services.html
@@ -5,131 +5,133 @@
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
-    @@include("../blocks/modules/header/header.html")
-    <main class="main">
-        <section class="section section--breadcrumbs">
-            <div class="container">
-                @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
-            </div>
-        </section>
-        <section class="section section--top">
-            <div class="container">
-                <h2 class="title mb-80">
-                    Услуги
-                </h2>
-                <div class="editor mb-60">
-                    <p>
-                        Мы выполняем широкий спектр услуг по производству и установке рекламы. Мы не рекламное агентство, а специализированная фирма с профессиональными сотрудниками, оборудованием и транспортом.
-                        Мы делаем все для того,чтобы работать с нами было понятно и эффективно!
-                    </p>
+    <div id="page">
+        @@include("../blocks/modules/header/header.html")
+        <main class="main">
+            <section class="section section--breadcrumbs">
+                <div class="container">
+                    @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
                 </div>
-                <div class="articles">
-                    <div class="articles__content">
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-1.png');">
-                                <h4 class="link-card__title">
-                                    Полиграфия
-                                </h4>
-                            </a>
+            </section>
+            <section class="section section--top">
+                <div class="container">
+                    <h2 class="title mb-80">
+                        Услуги
+                    </h2>
+                    <div class="editor mb-60">
+                        <p>
+                            Мы выполняем широкий спектр услуг по производству и установке рекламы. Мы не рекламное агентство, а специализированная фирма с профессиональными сотрудниками, оборудованием и транспортом.
+                            Мы делаем все для того,чтобы работать с нами было понятно и эффективно!
+                        </p>
+                    </div>
+                    <div class="articles">
+                        <div class="articles__content">
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-1.png');">
+                                    <h4 class="link-card__title">
+                                        Полиграфия
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-2.png');">
+                                    <h4 class="link-card__title">
+                                        Фирменная сувенирная продукция
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--50">
+                                <a href="" class="link-card link-card--invert" style="background-image: url('img/service-3.png');">
+                                    <h4 class="link-card__title">
+                                        Широкоформатная печать
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--50">
+                                <a href="" class="link-card" style="background-image: url('img/service-4.png');">
+                                    <h4 class="link-card__title">
+                                        Наружная <br> и интерьерная <br> реклама
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-5.png');">
+                                    <h4 class="link-card__title">
+                                        Брендирование автотранспорта
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-6.png');">
+                                    <h4 class="link-card__title">
+                                        Разработка дизайна 
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-7.png');">
+                                    <h4 class="link-card__title">
+                                        Аренда фотозон и выставочного оборудования
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-8.png');">
+                                    <h4 class="link-card__title">
+                                        Оформление деловых мероприятий
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--50">
+                                <a href="" class="link-card" style="background-image: url('img/service-9.png');">
+                                    <h4 class="link-card__title">
+                                        Строительство выставочных стендов
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-10.png');">
+                                    <h4 class="link-card__title">
+                                        UV-Печать
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-11.png');">
+                                    <h4 class="link-card__title">
+                                        POS материалы
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-12.png');">
+                                    <h4 class="link-card__title">
+                                        Плоттерная резка 
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25">
+                                <a href="" class="link-card" style="background-image: url('img/service-13.png');">
+                                    <h4 class="link-card__title">
+                                        Лазерная/фрезерная резка и гравировка
+                                    </h4>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
                         </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-2.png');">
-                                <h4 class="link-card__title">
-                                    Фирменная сувенирная продукция
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--50">
-                            <a href="" class="link-card link-card--invert" style="background-image: url('img/service-3.png');">
-                                <h4 class="link-card__title">
-                                    Широкоформатная печать
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--50">
-                            <a href="" class="link-card" style="background-image: url('img/service-4.png');">
-                                <h4 class="link-card__title">
-                                    Наружная <br> и интерьерная <br> реклама
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-5.png');">
-                                <h4 class="link-card__title">
-                                    Брендирование автотранспорта
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-6.png');">
-                                <h4 class="link-card__title">
-                                    Разработка дизайна 
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-7.png');">
-                                <h4 class="link-card__title">
-                                    Аренда фотозон и выставочного оборудования
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-8.png');">
-                                <h4 class="link-card__title">
-                                    Оформление деловых мероприятий
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--50">
-                            <a href="" class="link-card" style="background-image: url('img/service-9.png');">
-                                <h4 class="link-card__title">
-                                    Строительство выставочных стендов
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-10.png');">
-                                <h4 class="link-card__title">
-                                    UV-Печать
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-11.png');">
-                                <h4 class="link-card__title">
-                                    POS материалы
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-12.png');">
-                                <h4 class="link-card__title">
-                                    Плоттерная резка 
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25">
-                            <a href="" class="link-card" style="background-image: url('img/service-13.png');">
-                                <h4 class="link-card__title">
-                                    Лазерная/фрезерная резка и гравировка
-                                </h4>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
                     </div>
                 </div>
+            </section>
+        </main>
+        <footer class="section section--footer">
+            <div class="container">
+                @@include("../blocks/modules/footer/footer.html")
             </div>
-        </section>
-    </main>
-    <footer class="section section--footer">
-        <div class="container">
-            @@include("../blocks/modules/footer/footer.html")
-        </div>
-    </footer>
-    @@include("../blocks/modules/demo/demo.html")
+        </footer>
+        @@include("../blocks/modules/demo/demo.html")
+    </div>
     <script src="js/main.js"></script>
     <script src="js/vendor.js"></script>
 </body>
