--- a/src/views/7_contacts.html
+++ b/src/views/7_contacts.html
@@ -5,103 +5,105 @@
     @@include("../blocks/modules/head/head.html")
 </head>
 <body class="body">
-    @@include("../blocks/modules/header/header.html")
-    <main class="main">
-        <section class="section section--breadcrumbs">
-            <div class="container">
-                @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
-            </div>
-        </section>
-        <section class="section section--light section--top">
-            <div class="container">
-                <h2 class="title mb-40">
-                    Акции
-                </h2>
-                <div class="editor mb-60">
-                    <p>
-                        Мы регулярно проводим различные акции для наших клиентов. <br>
-                        Заказывайте рекламу выгодно!
-                    </p>
-                    <p>
-                        Подробности и условия Акции уточняйте у менеджера по телефону <strong><a href="tel:+79814750155">+7 981-475-01-55</a></strong>
-                    </p>
+    <div id="page">
+        @@include("../blocks/modules/header/header.html")
+        <main class="main">
+            <section class="section section--breadcrumbs">
+                <div class="container">
+                    @@include("../blocks/modules/breadcrumbs/breadcrumbs.html")
                 </div>
-                <div class="articles mb-40">
-                    <div class="articles__content">
-                        <div class="articles__item articles__item--66">
-                            <div class="contact-card">
-                                <svg class="contact-card__icon">
-                                    <use xlink:href="img/sprites/sprite.svg#icon-contacts-adress"></use>
-                                </svg>
-                                <p class="contact-card__text">
-                                    Калининград, Старшего лейтенанта Сибирякова, 23Б ("Твин")
-                                </p>
-                            </div>
-                        </div>
-                        <div class="articles__item articles__item--33">
-                            <div class="contact-card">
-                                <svg class="contact-card__icon">
-                                    <use xlink:href="img/sprites/sprite.svg#icon-contacts-clock"></use>
-                                </svg>
-                                <p class="contact-card__text">
-                                    Пн-Пт с 10 до 19
-                                </p>
-                            </div>
-                        </div>
-                        <div class="articles__item articles__item--33">
-                            <a href="mailto:info@39rpk.ru" class="contact-card">
-                                <svg class="contact-card__icon">
-                                    <use xlink:href="img/sprites/sprite.svg#icon-contacts-mail"></use>
-                                </svg>
-                                <p class="contact-card__text">
-                                    info@39rpk.ru
-                                </p>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--33">
-                            <a href="+74012750155" class="contact-card">
-                                <svg class="contact-card__icon">
-                                    <use xlink:href="img/sprites/sprite.svg#icon-contacts-call"></use>
-                                </svg>
-                                <p class="contact-card__text">
-                                    +7 (4012) 75-01-55
-                                </p>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--33">
-                            <a href="tel:+79814750155" class="contact-card">
-                                <svg class="contact-card__icon">
-                                    <use xlink:href="img/sprites/sprite.svg#icon-contacts-call"></use>
-                                </svg>
-                                <svg class="contact-card__icon">
-                                    <use xlink:href="img/sprites/sprite.svg#icon-telegram"></use>
-                                </svg>
-                                <svg class="contact-card__icon">
-                                    <use xlink:href="img/sprites/sprite.svg#icon-viber"></use>
-                                </svg>
-                                <svg class="contact-card__icon">
-                                    <use xlink:href="img/sprites/sprite.svg#icon-whatsapp"></use>
-                                </svg>
-                                <p class="contact-card__text">
-                                    +7 981-475-01-55
-                                </p>
-                            </a>
-                        </div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
-                        <div class="articles__item articles__item--25 articles__item--clear"></div>
+            </section>
+            <section class="section section--light section--top">
+                <div class="container">
+                    <h2 class="title mb-40">
+                        Акции
+                    </h2>
+                    <div class="editor mb-60">
+                        <p>
+                            Мы регулярно проводим различные акции для наших клиентов. <br>
+                            Заказывайте рекламу выгодно!
+                        </p>
+                        <p>
+                            Подробности и условия Акции уточняйте у менеджера по телефону <strong><a href="tel:+79814750155">+7 981-475-01-55</a></strong>
+                        </p>
                     </div>
+                    <div class="articles mb-40">
+                        <div class="articles__content">
+                            <div class="articles__item articles__item--66">
+                                <div class="contact-card">
+                                    <svg class="contact-card__icon">
+                                        <use xlink:href="img/sprites/sprite.svg#icon-contacts-adress"></use>
+                                    </svg>
+                                    <p class="contact-card__text">
+                                        Калининград, Старшего лейтенанта Сибирякова, 23Б ("Твин")
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="articles__item articles__item--33">
+                                <div class="contact-card">
+                                    <svg class="contact-card__icon">
+                                        <use xlink:href="img/sprites/sprite.svg#icon-contacts-clock"></use>
+                                    </svg>
+                                    <p class="contact-card__text">
+                                        Пн-Пт с 10 до 19
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="articles__item articles__item--33">
+                                <a href="mailto:info@39rpk.ru" class="contact-card">
+                                    <svg class="contact-card__icon">
+                                        <use xlink:href="img/sprites/sprite.svg#icon-contacts-mail"></use>
+                                    </svg>
+                                    <p class="contact-card__text">
+                                        info@39rpk.ru
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--33">
+                                <a href="+74012750155" class="contact-card">
+                                    <svg class="contact-card__icon">
+                                        <use xlink:href="img/sprites/sprite.svg#icon-contacts-call"></use>
+                                    </svg>
+                                    <p class="contact-card__text">
+                                        +7 (4012) 75-01-55
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--33">
+                                <a href="tel:+79814750155" class="contact-card">
+                                    <svg class="contact-card__icon">
+                                        <use xlink:href="img/sprites/sprite.svg#icon-contacts-call"></use>
+                                    </svg>
+                                    <svg class="contact-card__icon">
+                                        <use xlink:href="img/sprites/sprite.svg#icon-telegram"></use>
+                                    </svg>
+                                    <svg class="contact-card__icon">
+                                        <use xlink:href="img/sprites/sprite.svg#icon-viber"></use>
+                                    </svg>
+                                    <svg class="contact-card__icon">
+                                        <use xlink:href="img/sprites/sprite.svg#icon-whatsapp"></use>
+                                    </svg>
+                                    <p class="contact-card__text">
+                                        +7 981-475-01-55
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                            <div class="articles__item articles__item--25 articles__item--clear"></div>
+                        </div>
+                    </div>
+                    @@include("../blocks/modules/map-block/map-block.html")
                 </div>
-                @@include("../blocks/modules/map-block/map-block.html")
+            </section>
+        </main>
+        <footer class="section section--footer">
+            <div class="container">
+                @@include("../blocks/modules/footer/footer.html")
             </div>
-        </section>
-    </main>
-    <footer class="section section--footer">
-        <div class="container">
-            @@include("../blocks/modules/footer/footer.html")
-        </div>
-    </footer>
-    @@include("../blocks/modules/demo/demo.html")
+        </footer>
+        @@include("../blocks/modules/demo/demo.html")
+    </div>
     <script src="js/main.js"></script>
     <script src="js/vendor.js"></script>
 </body>
